# slapdash

./: README.md  pyproject.toml
slapdash/: hello.py  structure.json
