[tool.poetry]
name = "slapdash"
version = "0.1.0"
description = ""
authors = ["Riley Miller <waskerdu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"
rich = "^12.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
